@@ -64,7 +64,7 @@
  ****************************************************************************/
 
 #if defined(CONFIG_NET) && CONFIG_NFILE_DESCRIPTORS > 0
-int net_checksd(FAR _TCB *tcb, int sd, int oflags)
+int net_checksd(int sd, int oflags)
 {
   FAR struct socket *psock = sockfd_socket(sd);
 
@@ -84,5 +84,5 @@ int net_checksd(FAR _TCB *tcb, int sd, int oflags)
 
   return OK;
 }
-#endif /* CONIG_NET && ONFIG_NFILE_DESCRIPTORS > 0 */
+#endif /* CONIG_NET && CONFIG_NFILE_DESCRIPTORS > 0 */
 
